# pngwriter

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  NEWS.md  PNGwriterConfig.cmake.in  README  README.md  configure  make.include  make.include.linux  make.include.linux.oldcpp  make.include.osx
doc/: CHANGES  EXAMPLES  LICENSE  PNGwriterQuickReference.rtf  README
doc/english/: CHANGES  EXAMPLES  LICENSE  README
doc/espaniol/: CAMBIOS  EJEMPLOS  LEAME  LICENCIA
examples/: Makefile  blackwhite.cc  diamond.cc  lyapunov.cc  lyapunov.espaniol.cc  pngtest.cc  pngtest.espaniol.cc
src/: Makefile  pngwriter.cc  pngwriter.h
tests/: blackwhite.cc  diamond.cc  performance.cc  readwrite.cc
